samples/_failures_safe/1761652778_a0442d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e1286b4.c: In function ‘main’:
./samples/SAFE/__tmp_9e1286b4.c:142:16: error: expected ‘)’ at end of input
  142 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_9e1286b4.c:142:5: error: too few arguments to function ‘add_edge’
  142 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_9e1286b4.c:30:5: note: declared here
   30 | int add_edge(struct Graph *g, int src, int dest, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_9e1286b4.c:142:5: error: expected declaration or statement at end of input
  142 |     add_edge(&g
      |     ^~~~~~~~
